fix gradient bleed

--- a/themes/sherpa/styles/_sections.sass
+++ b/themes/sherpa/styles/_sections.sass
@@ -209,17 +209,9 @@ section
       width: 100%
     h1
       margin-top: 1em
-    ul#logos
-      +xy-grid
+    img#clients
       +bg-gradient-fade(rainbow)
-      box-shadow: inset 5px 5px $colour-black, inset -5px -5px $colour-black
-      li
-        +xy-cell(1 of 3, false)
-        width: 33.33333333333333333333%
-        margin: -1px
-        img
-          border: 10px solid $colour-black
-          box-shadow: inset 5px 5px $colour-black, inset -5px -5px $colour-black
+
     #case-studies
       h2
         margin-bottom: 1em
